--- a/styles/signin.css
+++ b/styles/signin.css
@@ -1,11 +1,4 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
-    font-family: sans-serif;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -13,18 +6,8 @@ body {
     height: 100vh;
 }
 
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
 img {
-    width: 100%;
     max-width: 100px;
-    margin: 0;
 }
 
 .main,
@@ -85,6 +68,7 @@ img {
     font-size: 0.875rem;
     font-weight: semibold;
     color: #1a73e8;
+    cursor: pointer;
 }
 
 .learn-more a {
@@ -103,6 +87,22 @@ img {
 .create-account {
     color: #1a73e8;
     font-size: 0.9375rem;
+    padding: 8px 6px;
+    border-radius: 3px;
+    cursor: pointer;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+
+.create-account:hover {
+    background-color: #1a73e81c;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
 }
 
 .next-button button {
@@ -151,6 +151,11 @@ img {
 .signin-password-box {
     padding-bottom: 100px;
 }
+
+.top-signin-box {
+    margin-bottom: 20px;
+}
+
 .top-signin-box div:last-child {
     display: flex;
     align-items: center;
@@ -159,7 +164,7 @@ img {
     gap: 10px;
     align-items: center;
     justify-content: center;
-    padding: 4px 12px;
+    padding: 5px 12px;
     border-radius: 20px;
     border: 1px solid #ccc;
     -webkit-border-radius: 20px;
@@ -181,7 +186,9 @@ img {
     width: fit-content;
     width: 20px;
     height: 20px;
-    border: 2px solid red;
+    padding: 5px;
+    cursor: pointer;
+    background-color: red;
 }
 .show-password input:checked {
     background-color: #1a73e8;
@@ -196,6 +203,21 @@ img {
 }
 
 .signin-password-main .forgot-password {
-    font-weight: 600;
+    font-weight: semibold;
     cursor: pointer;
+    padding: 8px 6px;
+    border-radius: 3px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+
+.signin-password-main .forgot-password:hover {
+    background-color: #1a73e81c;
+    transition: all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
 }
