--- a/styles/classrooms.css
+++ b/styles/classrooms.css
@@ -87,3 +87,24 @@
     -o-border-radius: 50%;
     cursor: pointer;
 }
+
+.arrow-icon {
+    width: 100%;
+    height: 100%;
+    text-align: right;
+    padding: 5px 15px 0;
+}
+
+.arrow-icon img {
+    width: 50px;
+    margin-right: 20px;
+}
+
+.arrow-icon p {
+    width: fit-content;
+    margin-left: auto;
+    text-align: center;
+    font-weight: 500;
+    color: #5F6368;
+    font-size: .875rem;
+}
