implemented the login functionality in the script file

--- a/front-end/styles/signin.css
+++ b/front-end/styles/signin.css
@@ -79,6 +79,12 @@ img {
     cursor: pointer;
 }
 
+.error {
+    color: red;
+    margin-top: 8px;
+    font-weight: semibold;
+}
+
 .learn-more a {
     color: #1a73e8;
     font-weight: semibold;
