--- a/front-end/styles/classrooms.css
+++ b/front-end/styles/classrooms.css
@@ -159,3 +159,70 @@
     color: white;
     padding: 10px 22px;
 }
+
+
+
+
+
+.manage-profile{
+   background-color: rgb(243, 246, 252);
+   position: absolute;
+   top: 70px;
+   right:10px;
+   height: 360px;
+   width: 412px;
+   border-radius: 25px;
+   visibility: hidden;
+   
+}
+.manage-container{
+    display: flex;
+    flex-direction: column;
+    margin:10px;
+    background-color:white;
+    height:50%;
+    border-radius: 25px;
+    padding-top:15px;
+    padding-left: 10px;
+    justify-content: center;
+    te
+
+}
+.view-account{
+    display: flex;
+    direction: row;
+    gap:20px;
+}
+.email-data{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap:6px;
+    font-family:"Product Sans",Arial,Helvetica,sans-serif;
+    color:#444746;
+}
+.email-data .email{
+    font-weight: 200;
+    color:#5b5e5d;
+}
+.profile img{
+    border-radius: 50%;
+    height:75px;
+    width: 75px;;
+}
+.manage-account{
+    background-color: yellow;
+    height:40%;
+    width: 80%;
+    border-radius: 25px;
+}
+.manage-account a{
+
+}
+.signout{
+    background-color: red;
+    
+}
+.terms-policy{
+    background-attachment: green;
+}
