creating-styling manage account page

--- a/front-end/styles/classrooms.css
+++ b/front-end/styles/classrooms.css
@@ -155,11 +155,6 @@
     color: white;
     padding: 10px 22px;
 }
-
-
-
-
-
 .manage-profile{
    background-color: rgb(243, 246, 252);
    position: absolute;
@@ -206,7 +201,8 @@
 .profile img{
     border-radius: 50%;
     height:75px;
-    width: 75px;;
+    width: 75px;
+    object-fit: cover;
 }
 .manage-account{      
     border-radius: 25px;
@@ -221,13 +217,9 @@
     padding: 5px 20px;
     font-size: 15px;
     border:1px solid black;
-    border-radius: 25px;
-
-   
+    border-radius: 25px;   
     border-bottom-width: 1px;
     padding-bottom: 25px;
-
-
     font-family: "Product Sans",Arial,Helvetica,sans-serif;
     font-weight: 500;
     font-size: 14px;
@@ -235,18 +227,12 @@
     letter-spacing: normal;
     border-radius: 8px;
     border: 1px solid #747775;
-    color: #1f1f1f;
-    
-    margin-bottom: 9px;
-   
+    color: #1f1f1f;    
+    margin-bottom: 9px;   
     margin-top: 8px;
     max-width: 254px;
-    /* padding: 5px 15px; */
     position: relative;
     text-align: center;
-
-
-
 }
 
 .signout{
@@ -258,48 +244,20 @@
     border-radius: 25px;
     padding-top:15px;
     padding-left: 20px;
-    gap: 20px;
-    
-    align-items: center;
-    
-    
+    gap: 20px;    
+    align-items: center;    
 }
 .signout a{
     text-decoration: none;
     color:#5b5e5d;
     font-weight: 600;
 }
-.signout img{
-    
+.signout img{    
     height: 30px;
     width: 30px;
 }
 .terms-policy{
-    background-attachment: green;
-}
-/* Sidebar */
-
-.sidebar {
-    height: 100vh;
-    width: 300px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: white;
-    overflow-x: hidden;
-    overflow-y: auto;
-    box-shadow: 4px 0 13px 0 rgba(0,0,0,0.11);
-    -webkit-box-shadow: 4px 0 13px 0 rgba(0,0,0,0.11);
-    -moz-box-shadow: 4px 0 13px 0 rgba(0,0,0,0.18);
-    transition: left 0.3s ease-in-out;
-    -webkit-transition: left 0.3s ease-in-out;
-    -moz-transition: left 0.3s ease-in-out;
-    -ms-transition: left 0.3s ease-in-out;
-    -o-transition: left 0.3s ease-in-out;
-}
-
-.terms-policy{
-margin: 10px;
+    margin: 10px;
 }
 .privacy-container{
     display: flex;
@@ -325,6 +283,28 @@ hr{
     border-radius: 50%;
     background-color:#5b5e5d; ;
 }
+
+/* Sidebar */
+
+.sidebar {
+    height: 100vh;
+    width: 300px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    overflow-x: hidden;
+    overflow-y: auto;
+    box-shadow: 4px 0 13px 0 rgba(0,0,0,0.11);
+    -webkit-box-shadow: 4px 0 13px 0 rgba(0,0,0,0.11);
+    -moz-box-shadow: 4px 0 13px 0 rgba(0,0,0,0.18);
+    transition: left 0.3s ease-in-out;
+    -webkit-transition: left 0.3s ease-in-out;
+    -moz-transition: left 0.3s ease-in-out;
+    -ms-transition: left 0.3s ease-in-out;
+    -o-transition: left 0.3s ease-in-out;
+}
+
 
 .sidebar.hide {
     left: -300px;
