--- a/front-end/styles/signin.css
+++ b/front-end/styles/signin.css
@@ -93,6 +93,7 @@ img {
 .bottom-signin-box > div:nth-child(2),
 .bottom-signup-box > div:last-child {
     font-size: 0.875rem;
+    
 }
 
 .bottom-signin-box > div:last-child,
@@ -125,7 +126,8 @@ img {
 .next-button button,
 .signup-button button,
 .check-button button,
-.login-button button {
+.login-button button,
+.change-button button {
     color: white;
     background-color: #1a73e8;
     border: none;
