--- a/front-end/styles/signup.css
+++ b/front-end/styles/signup.css
@@ -77,3 +77,12 @@ select {
     font-size: 1rem;
     cursor: pointer;
 }
+.change-data{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    padding-left: 35%;
+
+}
