--- a/front-end/styles/classrooms.css
+++ b/front-end/styles/classrooms.css
@@ -184,7 +184,6 @@
     color: #3785eb;
     cursor: pointer;
 }
-
 .top-classrooms > div:hover {
     background-color: #3785eb17;
 }
@@ -207,11 +206,10 @@
     cursor: pointer;
     border: 1px solid #ccc;
 }
-
 .bottom-classrooms .class:hover {
     box-shadow: 10px 10px 26px -8px rgba(0,0,0,0.6);
--webkit-box-shadow: 10px 10px 26px -8px rgba(0,0,0,0.6);
--moz-box-shadow: 10px 10px 26px -8px rgba(0,0,0,0.6);
+    -webkit-box-shadow: 10px 10px 26px -8px rgba(0,0,0,0.6);
+    -moz-box-shadow: 10px 10px 26px -8px rgba(0,0,0,0.6);
 }
 
 .class .assignments,
@@ -228,12 +226,11 @@
 }
 
 .class .top-class {
-    background-image: url(https://plus.unsplash.com/premium_photo-1673697239936-c2599b0b0498?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80);
+    background-image: url("https://plus.unsplash.com/premium_photo-1673697239936-c2599b0b0498?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-
 .class .top-class > *:hover {
     text-decoration: underline;
 }
@@ -281,7 +278,6 @@
     flex-direction: column;
     gap: 5px;
 }
-
 .assignments .assignment:first-child {
     white-space: nowrap;
     overflow: hidden;
@@ -290,13 +286,12 @@
 }
 
 .assignments .assignment .due-date {
-    font-size: .8125rem;
+    font-size: 0.8125rem;
     font-weight: bold;
     color: #868686;
 }
-
 .assignments .assignment p:last-child {
-    font-size: .875rem;
+    font-size: 0.875rem;
     color: #676767;
 }
 
@@ -319,7 +314,6 @@
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
 }
-
 .class .bottom-class div:hover {
     background-color: #cccccc33;
 }
