displaying the classes in the classroom page

--- a/front-end/styles/classrooms.css
+++ b/front-end/styles/classrooms.css
@@ -58,6 +58,18 @@
     gap: 5px;
 }
 
+.right-navbar .create-class button, .right-navbar .join-class button {
+    padding: 8px 10px;
+    color: #1a73e8;
+    font-size: .875rem;
+    border-radius: 3px;
+    border: none;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+}
+
 .right-navbar .nav-profile-pic {
     width: 40px;
     height: 40px;
