--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -1,2 +1,107 @@
+.classroom-navbar {
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+}
 
+.left-classroom-navbar, .tabs, .right-classroom-navbar {
+    display: flex;
+    align-items: center;
+}
+
+.left-classroom-navbar, .right-classroom-navbar {
+    padding: 15px 10px;
+    gap: 10px;
+}
+
+.left-classroom-navbar .burger-icon {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    cursor: pointer;
+}
+
+.left-classroom-navbar .burger-icon:hover {
+    background-color: #cccccc3a;
+}
+
+.left-classroom-navbar .classroom-data {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.classroom-data .classroom-section {
+    font-size: .9375rem;
+    color: #5f6368;
+}
+
+.classroom-navbar .tabs {
+    height: 80px;
+}
+
+.classroom-navbar .tabs div {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+
+.classroom-navbar .tabs div:hover {
+    background-color: #cccccc36;
+}
+
+.classroom-navbar .tabs div:first-child {
+    border-bottom: 5px solid black;
+}
+
+.right-classroom-navbar > div:not(:last-child) {
+    padding: 12px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    cursor: pointer;
+}
+
+.right-classroom-navbar > div:not(:last-child):hover {
+    background-color: #cccccc36;
+}
+
+.profile-pic {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.profile-pic img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
