--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
+    margin-bottom: 30px;
 }
 
 .left-classroom-navbar, .tabs, .right-classroom-navbar {
@@ -103,5 +104,14 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    max-width: 1000px;
+    margin: auto;
+    background-color: red;
 }
 
