--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -1,3 +1,7 @@
+body {
+    padding-bottom: 100px;
+}
+
 .classroom-navbar {
     height: 80px;
     display: flex;
@@ -112,6 +116,299 @@
     gap: 30px;
     max-width: 1000px;
     margin: auto;
-    background-color: red;
+    padding: 0 30px;
 }
 
+.main .top-main {
+    background-color: blue;
+    height: 230px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15px;
+    background-image: url(./../assets/classroom.webp);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.main .top-main .customize-button {
+    background-color: aqua;
+    display: flex;
+    align-items: center;
+    align-self: flex-end;
+    gap: 20px;
+    padding: 10px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    background-color: white;
+    color: #03988f;
+    cursor: pointer;
+}
+
+.main .top-main .customize-button:hover {
+    background-color: rgba(255, 255, 255, 0.925);
+}
+
+.main .top-main > div:last-child {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main .top-main .classroom-data {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.main .top-main .classroom-data .classroom-name {
+    font-size: 2.1875rem;
+    font-weight: bold;
+    color: white;
+}
+
+.main .top-main .classroom-data .classroom-section {
+    color: white;
+    font-size: 1.2rem;
+}
+
+.main .top-main > div:last-child > div:last-child {
+    width: 20px;
+    height: 20px;
+    border: 2px solid white;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    align-self: flex-end;
+}
+
+
+
+
+
+.main .bottom-main {
+    display: flex;
+    gap: 25px;
+}
+
+.main .bottom-main .bottom-left-main {
+    flex: 2.3;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.main .bottom-main .bottom-right-main {
+    flex: 9.8;
+}
+
+.main .bottom-main .bottom-left-main {
+}
+
+/* GOOGE MEET SECTION */
+
+.main .bottom-left-main .google-meet, .main .bottom-left-main .assignments {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border: 1px solid #cccccc8c;
+}
+
+.main .bottom-left-main .google-meet {
+    gap: 0;
+    padding: 10px;
+}
+
+.main .bottom-left-main .google-meet > div {
+    display: flex;
+    align-items: center;
+}
+
+.main .bottom-left-main .google-meet > div:first-child {
+    justify-content: space-between;
+    color: black;
+}
+
+.google-meet .google-meet-link {
+    font-size: 1.25rem;
+    color: #007b83;
+    font-weight: bold;
+}
+
+.google-meet .icon {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    cursor: pointer;
+}
+
+.google-meet .icon:hover {
+    background-color: #cccccc67;
+}
+
+/* ASSIGNMENTS BOX */
+
+.main .bottom-main .bottom-left-main .assignments {
+    background-color: white;
+}
+
+.main .bottom-main .bottom-left-main .assignments div {
+    text-align: right;
+}
+
+.main .bottom-main .bottom-left-main .assignments p:last-of-type {
+    font-size: .8125rem;
+}
+
+.main .assignments div {
+    color: #007b83;
+}
+
+.main .assignments p:last-of-type {
+    font-size: 1rem;
+}
+
+.main .assignments p:last-of-type {
+    color: #737373;
+}
+
+
+
+.main .bottom-main .bottom-right-main {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+/* ANNOUUNCEMENT INPUT */
+
+.main .bottom-main .announcement-input {
+    display: flex;
+    align-items: center;
+    padding: 15px 20px;
+    border-radius: 10px;
+    gap: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border: 1px solid #cccccc59;
+    cursor: pointer;
+    box-shadow: 1px -1px 12px 1px rgba(0,0,0,0.43);
+-webkit-box-shadow: 1px -1px 12px 1px rgba(0,0,0,0.43);
+-moz-box-shadow: 1px -1px 12px 1px rgba(0,0,0,0.43);
+}
+
+.main .bottom-main .announcement-input div:nth-child(2) {
+    flex: 1;
+    height: 100%;
+}
+
+.main .bottom-main .announcement-input input {
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+}
+
+/* ANNOUNCEMETNS */
+
+.main .bottom-main .announcements {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
+}
+
+.main .bottom-main .announcement {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.main .bottom-main .announcement .announcement-top {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+    border-bottom: 1px solid #ccc;
+}
+
+.main .announcement .announcement-top > div:first-child {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.main .announcement .announcement-top .user-data {
+    display: flex;
+    gap: 15px;
+}
+
+.announcement .announcement-top .user-data .date {
+    font-size: .875rem;
+    color: #737373;
+}
+
+.main .announcement .announcement-top .user-data div:last-child {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.main .bottom-main .announcement .announcement-comment {
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.main .announcement-comment .comment-input {
+    flex: 1;
+}
+
+.main .announcement-comment .comment-input input {
+    width: 100%;
+    outline: none;
+    padding: 15px;
+    outline: none;
+    border: 1px solid #ccc;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    background-color: transparent;
+}
