--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -310,7 +310,7 @@ body {
 
 /* ANNOUUNCEMENT INPUT */
 
-.main .bottom-main .announcement-input {
+.main .bottom-main .announcement-input > div {
     display: flex;
     align-items: center;
     padding: 15px 20px;
@@ -339,6 +339,118 @@ body {
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+.announcement-input.text-area > div {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.announcement-input.text-area .text-input {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px 5px 0 0;
+    background-color: #cccccc79;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+    border-bottom: 3px solid #059993;
+}
+
+.announcement-input.text-area .text-input .toolbar {
+    border: none;
+}
+
+.announcement-input.text-area .text-input textarea {
+    width: 100%;
+    border: none;
+    outline: none;
+    height: 100px;
+    background-color: transparent;
+    padding: 10px;
+    font-size: 1rem;
+}
+
+.announcement-input.text-area .bottom {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 10px;
+}
+
+.announcement-input.text-area .bottom .icons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    flex: 10;
+    color: #059993;
+}
+
+.announcement-input.text-area .bottom .icons .icon {
+    min-width: 50px;
+    min-height: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #ccc;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    -ms-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+}
+
+.announcement-input.text-area .bottom .icons .icon:hover {
+    background-color: #cccccc46;;
+}
+
+.announcement-input.text-area .bottom .buttons {
+    display: flex;
+    gap: 20px;
+    margin-left: auto;
+}
+
+.announcement-input.text-area .bottom .buttons button {
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    color: #737373;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.announcement-input.text-area .bottom .buttons button:first-child {
+    padding: 8px 12px;
+    background-color: transparent;
+    font-size: .875rem;
+    transition: all .2s ease;
+    -webkit-transition: all .2s ease;
+    -moz-transition: all .2s ease;
+    -ms-transition: all .2s ease;
+    -o-transition: all .2s ease;
+}
+
+.announcement-input.text-area .bottom .buttons button:first-child:hover {
+    background-color: #cccccc46;
+}
+
+.announcement-input.text-area .bottom .buttons > div:last-child button {
+    padding: 10px 30px;
+    background-color: #cccccc46;
 }
 
 /* ANNOUNCEMETNS */
@@ -411,4 +523,14 @@ body {
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     background-color: transparent;
+}
+
+#editor {
+    border: none;
+    height: 100px;
+    font-size: 1rem;
+}
+
+#editor::placeholder {
+    font-size: 1rem;
 }
