--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -416,13 +416,11 @@ body {
 
 .announcement-input.text-area .bottom .buttons {
     display: flex;
+    align-items: center;
     gap: 20px;
-    margin-left: auto;
 }
 
-.announcement-input.text-area .bottom .buttons button {
-    border: none;
-    outline: none;
+.announcement-input.text-area .bottom .buttons .cancel-button {
     border-radius: 5px;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -431,10 +429,10 @@ body {
     color: #737373;
     font-size: 14px;
     cursor: pointer;
+    margin-bottom: 5px;
 }
 
 .announcement-input.text-area .bottom .buttons button:first-child {
-    padding: 8px 12px;
     background-color: transparent;
     font-size: .875rem;
     transition: all .2s ease;
@@ -442,15 +440,28 @@ body {
     -moz-transition: all .2s ease;
     -ms-transition: all .2s ease;
     -o-transition: all .2s ease;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
 }
 
-.announcement-input.text-area .bottom .buttons button:first-child:hover {
-    background-color: #cccccc46;
+#cancel-button {
+    padding: 10px 15px;
+}
+
+#cancel-button:hover {
+    background-color: #cccccc5d;
 }
 
 .announcement-input.text-area .bottom .buttons > div:last-child button {
     padding: 10px 30px;
-    background-color: #cccccc46;
+    background-color: #007b83;
+    color: white;
 }
 
 /* ANNOUNCEMETNS */
@@ -533,4 +544,12 @@ body {
 
 #editor::placeholder {
     font-size: 1rem;
+}
+
+#first-state-announcement.hide {
+    display: none;
+}
+
+#second-state-announcement.hide {
+    display: none;
 }
