--- a/front-end/styles/classroom.css
+++ b/front-end/styles/classroom.css
@@ -8,7 +8,15 @@ body {
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid #ccc;
+    background-color: white;
     margin-bottom: 10px;
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    /* box-shadow: 0px 5px 24px -2px rgba(0,0,0,0.92);
+-webkit-box-shadow: 0px 5px 24px -2px rgba(0,0,0,0.92);
+-moz-box-shadow: 0px 5px 24px -2px rgba(0,0,0,0.92); */
 }
 
 .left-classroom-navbar, .tabs, .right-classroom-navbar {
