--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -87,6 +87,49 @@
     color: white;
     background-color: #007b83;
     cursor: pointer;
+    position: relative;
+}
+
+.classwork-header .list {
+    position: absolute;
+    bottom: -130px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+    border-radius: 5px;
+    background-color: white;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    color: black;
+    box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.322);
+    -webkit-box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.356);
+    -moz-box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.37);
+    visibility: hidden;
+    transition: visibility .2s ease;
+    -webkit-transition: visibility .2s ease;
+    -moz-transition: visibility .2s ease;
+    -ms-transition: visibility .2s ease;
+    -o-transition: visibility .2s ease;
+}
+
+.classwork-header .list .list-item {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    padding: 15px 20px;
+    gap: 40px;
+}
+
+.classwork-header .list .list-item:hover {
+    background-color: #cccccc44;
+}
+
+.classwork-header .list .list-item .icon {
+    color: #007b83
 }
 
 .classwork-header .apps {
