--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -107,12 +107,15 @@
     box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.322);
     -webkit-box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.356);
     -moz-box-shadow: 0px 5px 24px -2px rgba(0, 0, 0, 0.37);
+    transition: visibility .1s ease;
+    -webkit-transition: visibility .1s ease;
+    -moz-transition: visibility .1s ease;
+    -ms-transition: visibility .1s ease;
+    -o-transition: visibility .1s ease;
+}
+
+.classwork-header .list.hide {
     visibility: hidden;
-    transition: visibility .2s ease;
-    -webkit-transition: visibility .2s ease;
-    -moz-transition: visibility .2s ease;
-    -ms-transition: visibility .2s ease;
-    -o-transition: visibility .2s ease;
 }
 
 .classwork-header .list .list-item {
