--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -229,3 +229,96 @@
     color: #737373;
     font-size: .75rem;
 }
+
+.add-topic-modal {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.356);
+    z-index: 9999;
+}
+
+.add-topic-modal.hide {
+    display: none;
+}
+
+.add-topic-modal .box {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 270px;
+    padding: 20px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    background-color: white;
+}
+
+.add-topic-modal input {
+    padding: 20px;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid black;
+    border-radius: 5px 5px 0 0;
+    -webkit-border-radius: 5px 5px 0 0;
+    -moz-border-radius: 5px 5px 0 0;
+    -ms-border-radius: 5px 5px 0 0;
+    -o-border-radius: 5px 5px 0 0;
+    font-size: 1rem;
+    background-color: #cccccc5e;
+    transition: all 0.15s linear;
+    -webkit-transition: all 0.15s linear;
+    -moz-transition: all 0.15s linear;
+    -ms-transition: all 0.15s linear;
+    -o-transition: all 0.15s linear;
+}
+
+.add-topic-modal input:focus {
+    border-bottom: 3px solid #007b83;
+}
+
+.add-topic-modal .box .buttons {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 10px;
+    font-size: .875rem;
+    margin-top: 20px;
+}
+
+.add-topic-modal button {
+    padding: 7px 10px;
+    border: none;
+    border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    -ms-border-radius: 2px;
+    -o-border-radius: 2px;
+    background-color: transparent;
+    font-size: .875rem;
+    cursor: pointer;
+    transition: all .2s linear;
+    -webkit-transition: all .2s linear;
+    -moz-transition: all .2s linear;
+    -ms-transition: all .2s linear;
+    -o-transition: all .2s linear;
+}
+
+.add-topic-modal button:first-of-type:hover {
+    background-color: #7373733b;
+}
+
+.add-topic-modal button:last-of-type {
+    color: #007b83;
+}
+
+.add-topic-modal button:last-child:hover {
+    background-color: #007a8318;
+}
