implemented the show-hide functionality of the topic modal in js

--- a/front-end/styles/classwork.css
+++ b/front-end/styles/classwork.css
@@ -247,6 +247,10 @@
     display: none;
 }
 
+.add-topic-modal.show {
+    position: fixed;
+}
+
 .add-topic-modal .box {
     display: flex;
     flex-direction: column;
