--- a/front-end/styles/classrooms.css
+++ b/front-end/styles/classrooms.css
@@ -142,6 +142,15 @@ a {
   cursor: pointer;
 }
 
+.manage-account-modal {
+  position: absolute;
+  background-color: red;
+  width: 200px;
+  height: 300px;
+  top: 70px;
+  right: 10px;
+}
+
 .arrow-icon {
   width: 100%;
   height: 100%;
