Added add_topic in js

--- a/front-end/styles/signin.css
+++ b/front-end/styles/signin.css
@@ -127,7 +127,7 @@ img {
 .signup-button button,
 .check-button button,
 .login-button button,
-.change-button button {
+.change-password-button button {
     color: white;
     background-color: #1a73e8;
     border: none;
@@ -244,4 +244,16 @@ img {
 
 .forgot-password-page .user-email:hover {
     background-color: #cccccc3a;
+}
+
+.answer-error, .passwords-error {
+    color: red;
+}
+
+.answer-error.hide, .passwords-error.hide {
+    display: none;
+}
+
+.check-button.hide, .change-password-button.hide {
+    display: none;
 }
